# study-routine-tracker

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Export for Android.bat  Install Autostart.bat  LICENSE  README.md  Remove Autostart.bat  Start Reflex.bat  Start Tablet App.bat  Start Tracker.bat  Stop Sticker.bat  Tracker Control.bat  app.py  app_styles.py  auth.py  break_games_config.py  coach.py  database.py  deathstar_watcher.py  desktop_companion.py  docker-compose.yml  garden.py  garden_life.py  garden_map.py  garden_vitality.py  get.html  git_sync.py  index.html  logbook.py  main.py  manifest.webmanifest  pro.py  profile.py  pyproject.toml  relax_games.py  requirements-desktop.txt  requirements-reflex.txt  requirements.txt  (+6 more)
.streamlit/: config.toml  secrets.toml.example
alembic/: env.py
android/: buildozer.spec  docker-compose.yml  main.py  webview.py
assets/: styles.css
css/: app.css
docs/: MIGRATE_TO_ANDROID.md  STRUCTURE.md  TABLET_GUIDE.md
games/: balloon_pop.html  bubble_pop.html  lichess_puzzle.html  neon_racer.html  snake.html  star_catch.html
js/: garden.js
launchers/: Start_Reflex.bat  Stop_Sticker.bat  Tracker_Control.bat  control.bat  force_stop.bat  start_deathstar.bat  start_tracker.bat  start_vader.bat  status.bat  stop_deathstar.bat  stop_everything.bat  stop_tracker.bat
mobile/: .gitignore  README.md  capacitor.config.json  main.py  package.json
scripts/: _inspect_db.py  _migrate_local_db.py  _test_legacy_local_split.py  _test_local_db.py  build_apk.ps1  create_desktop_shortcut.ps1  export_to_android.py  generate_sticker_assets.py  import_db.ps1  install_startup.ps1  kill_visible_python.ps1  resolve_python.ps1  serve_tablet_app.ps1  start_tracker.ps1  status_tracker.ps1  stop_all_tracker.ps1  stop_sticker.ps1  tracker_processes.ps1
(+74 files in other folders)
